# ai-pixel

./: README.md  pyproject.toml
.github/: copilot-instructions.md
aipixel/: __init__.py  cli.py  codec.py  datasets.py  model.py  viz.py
docs/: app.js  index.html  style.css
examples/: quickstart.py  sunscreen.py  umbrella.py
tests/: test_codec.py  test_model.py  test_roundtrip.py
